# hrithik-mlops-zoomcamp

./: README.md  prefect.yaml
homework-2024/week1/: hw.ipynb
homework-2024/week2/: register_model.py
homework-2025/: .gitignore  prefect.yaml  pyproject.toml
homework-2025/week1/: hw.ipynb
homework-2025/week2-mlflow/: scenario-3.ipynb
homework-2025/week3-prefect/: cat_facts.py  getting_started.py  hw.ipynb  orchestrate_pre_prefect.py  prefect.yaml
homework/week2/: hw.ipynb  train.py
