[project]
name = "homework-2025"
version = "0.1.0"
description = "MLOps ZoomCamp 2025 Homework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
