[project]
name = "homework-2025"
version = "0.1.0"
description = "MLOps ZoomCamp 2025 Homework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "boto3>=1.38.23",
    "fastparquet>=2024.11.0",
    "hyperopt>=0.2.7",
    "jupyter>=1.1.1",
    "mlflow>=2.22.0",
    "numpy>=2.2.5",
    "orjson>=3.10.18",
    "pandas>=2.2.3",
    "prefect>=3.4.4",
    "prefect-aws>=0.5.10",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
